# FastNPP

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  nppbenchmark.h
benchmarks/CPU/: benchmark_CPU_NPP_vs_FastNPP.cu
benchmarks/batchresize/: benchmark_npp_batchresize_x_split3D.cu
cmake/: discover_tests.cmake  doxygen.cmake
cmake/libs/cuda/: cuda.cmake
include/: fast_npp.cuh
tests/: fastNPP_basic_test.cu  testsNppCommon.h
tests/basic/: fastNPP_basic_test.cu
